--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <ul>
     <li> 2 slices of bread  
-    <ul></ul>
+    <ul>cheddar, swiss, provolone</ul>
     </li>
     <li> 4 slices of cheese </li>
     <li> 1 tbsp of butter   </li>
