--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <ul>
     <li> 2 slices of bread  
       <ul>
+        <li>cheddar</li>
+        <li>swiss</li>
+        <li>gouda</li>
       </ul>
     </li>
     <li> 4 slices of cheese </li>
