--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
 <body>
 
   <ul>
-    <li> 2 slices of bread  
+    <li> 2 slices of bread  </li>
+    <li> 4 slices of cheese </li>
       <ul>
         <li>cheddar</li>
         <li>swiss</li>
         <li>gouda</li>
       </ul>
-    </li>
-    <li> 4 slices of cheese </li>
     <li> 1 tbsp of butter   </li>
   </ul>
   
